--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 1,
-        "setup": "Miksi tonttu ei koskaan eksy?",
-        "punchline": "Koska hän seuraa joulumieltä!",
+        "setup": "Mikä muuttolintu asuu kesät Hirvensalossa?",
+        "punchline": "Haarlapääsky!",
         "password":"mistelinoksa"
       },
       "geometry": {
@@ -607,3 +607,4 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
