--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 2,
-        "setup": "Mitä joulupukki sanoi kun kartta unohtui?",
-        "punchline": "Aja vain kohti pohjoista!",
+        "setup": "Mikä investointipankki kaatui finanssikriisissä vuonna 2008?",
+        "punchline": "Lehmän Brothers!",
         "password":"joulutähti"
       },
       "geometry": {
@@ -191,8 +191,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 3,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Millä käytetyin kuukautissuoja Noormarkussa?",
+        "punchline": "Noormarkkuukuppi!",
         "password":"joulusukka"
       },
       "geometry": {
@@ -607,4 +607,5 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
