--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 3,
-        "setup": "Millä käytetyin kuukautissuoja Noormarkussa?",
-        "punchline": "Noormarkkuukuppi!",
+        "setup": "Mikä on käytetyin kuukautissuoja Noormarkussa?",
+        "punchline": "NoormarkKuukuppi!",
         "password":"joulusukka"
       },
       "geometry": {
@@ -607,5 +607,6 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
