--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 2,
-        "setup": "Mikä investointipankki kaatui finanssikriisissä vuonna 2008?",
+        "setup": "Mikä investointipankki kaatui märehtijämaailman finanssikriisissä vuonna 2008?",
         "punchline": "Lehmän Brothers!",
         "password":"joulutähti"
       },
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
