--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 4,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä on porilaisen kettuyhteiskunnan hallitsija?",
+        "punchline": "Repo-tsaari!",
         "password":"konvehtirasia"
       },
       "geometry": {
@@ -217,8 +217,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 5,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Kuinka kauan hassusti puhuvat matkailijat viihtyvät keskimäärin Pöytyällä?",
+        "punchline": "Äpöyt yän!",
         "password":"porkkanalaatikko"
       },
       "geometry": {
@@ -412,8 +412,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 20,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mitä eurajokelainen sanoi, kun muisti sen maanmuodostuman, jolle ydinvoimalat rakennettiin?",
+        "punchline": '"Se oliki luoto!"',
         "password":"joulujuhla"
       },
       "geometry": {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
