--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 6,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mitkä koristeet roikkuvat Littoisten lavan etuovessa?",
+        "punchline": "Lavakranssit!",
         "password":"tonttu"
       },
       "geometry": {
@@ -243,8 +243,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 7,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mitä alaa ruotsalaiset tohelot voivat opiskella Upsalassa?",
+        "punchline": "Hups-alaa!",
         "password":"muori"
       },
       "geometry": {
@@ -256,8 +256,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 8,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Raumalla saavutettiin koronain aikaan todella hyvä rokotekattavuus. Miksi tätä kutsuttiin?",
+        "punchline": "Raumaimmuniteetiksi!",
         "password":"korvatunturi"
       },
       "geometry": {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
