--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 8,
-        "setup": "Raumalla saavutettiin koronain aikaan todella hyvä rokotekattavuus. Miksi tätä kutsuttiin?",
+        "setup": "Raumalla saavutettiin koronan aikaan todella hyvä rokotekattavuus. Miksi tätä kutsuttiin?",
         "punchline": "Raumaimmuniteetiksi!",
         "password":"korvatunturi"
       },
@@ -269,8 +269,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 9,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä on vanhempi kuin Parainen?",
+        "punchline": "Papparainen!",
         "password":"reki"
       },
       "geometry": {
@@ -282,8 +282,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 10,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä on Muumimuseon nuuskabisneksen toimintamalli?",
+        "punchline": "Nuuskamuikkunen tuo lastin Haaparannasta ja Pikku Myy.",
         "password":"joulumarkkinat"
       },
       "geometry": {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
