--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 11,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mihin nuhanen ankka menee lomalle?",
+        "punchline": "Duckholmaan!",
         "password":"joulusiivous"
       },
       "geometry": {
         "type": "Point",
-        "coordinates": [18.06309282932712, 59.31526682229454] // OK
+        "coordinates": [18.06309282932712, 59.31526682229454] // OK, Tukholma
       }
     },
     {
@@ -321,13 +321,13 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 13,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Miten adessiivia osaamaton laitilalainen tilaa hampurilaisaterian?",
+        "punchline": '"Hamppari ranskalaisila ja Coca-Cola Laitila."',
         "password":"savupiippu"
       },
       "geometry": {
         "type": "Point",
-        "coordinates": [21.95060565884398, 60.84266351774494] // OK
+        "coordinates": [21.95060565884398, 60.84266351774494] // OK, Laitila
       }
     },
     {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
