--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 14,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mistä tietää, että ollaan saavuttu Tampereelle?",
+        "punchline": 'Kun tienvarsikyltissä lukee "Ikaalinen"!',
         "password":"lahjapaketti"
       },
       "geometry": {
@@ -347,8 +347,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 15,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä on mummon kotikaupunki?",
+        "punchline": "Muusikaupunki!",
         "password":"perhejoulu"
       },
       "geometry": {
@@ -366,7 +366,7 @@ const luukut = {
       },
       "geometry": {
         "type": "Point",
-        "coordinates": [19.93928013166697, 60.096892984316355] // OK
+        "coordinates": [19.93928013166697, 60.096892984316355] // OK, Maarianhamina
       }
     },
     {
@@ -405,7 +405,7 @@ const luukut = {
       },
       "geometry": {
         "type": "Point",
-        "coordinates": [22.903834936995537, 61.34390853111933] // OK
+        "coordinates": [22.903834936995537, 61.34390853111933] // OK, Sastamala
       }
     },
     {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
