--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 16,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä on isien lemppari lomakohde?",
+        "punchline": "Kahvenanmaa!",
         "password":"joulukuusi"
       },
       "geometry": {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
