--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 17,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä on huikea heroiininkäyttöiltama (joka järjestetään nyt seitsemännen kerran)?",
+        "punchline": "Kova VII koni-ilta!",
         "password":"jouluntaika"
       },
       "geometry": {
@@ -386,8 +386,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 18,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Miksi kreikkalaisen ruuan ystävä lähti Hämeenkyröön?",
+        "punchline": "Hän oli kuullut, että siellä sijaitsee Gyroskoski!",
         "password":"joululaulu"
       },
       "geometry": {
@@ -399,8 +399,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 19,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mitä tulee kysyä, jos rakas ehdottaa road trippiä Tampereen läheiseen kaupunkiin?",
+        "punchline": '"Nooh onks toi nyt viisasta Ma` laav?"',
         "password":"glögi"
       },
       "geometry": {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
