--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 21,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä on sun poikaystävästän mielestä ikävää? (+ englanninkielinen näppäimistö jäänyt päälle) ",
+        "punchline": "Ku pittaa teha ruokaa!",
         "password":"tonttulakki"
       },
       "geometry": {
@@ -438,8 +438,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 22,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mitkä ovat porilaisten lempimausteet?",
+        "punchline": "Pippori ja porianteri!",
         "password":"rosolli"
       },
       "geometry": {
@@ -451,8 +451,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 23,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mitä saaristolainen tekee ennen kuin uskaltautuu mennä pokaamaan baarissa kiinnostuksen kohdettaan (serkkuaan)?",
+        "punchline": "Ottaa pari nauvoa-antavaa!",
         "password":"joulunodotus"
       },
       "geometry": {
@@ -464,8 +464,8 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 24,
-        "setup": "x",
-        "punchline": "x",
+        "setup": "Mikä adjektiivi kuvaisi tilannetta, kun tallinnalaiset khassit ottaisivat khassikahvilan haltuunsa ja alkaisivat pitää siellä jöötä?",
+        "punchline": "Nurrinkurinen!",
         "password":"hyvääjoulua"
       },
       "geometry": {
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
