--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ const luukut = {
       "type": "Feature",
       "properties": {
         "luukku": 21,
-        "setup": "Mikä on sun poikaystävästän mielestä ikävää? (+ englanninkielinen näppäimistö jäänyt päälle) ",
+        "setup": "Mikä on sun poikaystävän mielestä ikävää? (+ kun englanninkielinen näppäimistö jäänyt päälle)?",
         "punchline": "Ku pittaa teha ruokaa!",
         "password":"tonttulakki"
       },
@@ -607,6 +607,7 @@ L.geoJSON(luukut, {
 </script>
 </body>
 </html>
+
 
 
 
